--- a/site/src/Pages/Login/index.scss
+++ b/site/src/Pages/Login/index.scss
@@ -6,11 +6,11 @@
     font-family: Arial, Helvetica, sans-serif;
 
     .form-container {
-        width: 40%;
+        width: 25%;
         height: 85%;
         // border: 1px solid black;
         box-shadow: 0 0 5px rgba(0, 0, 0, 0.4);
-        background-color: rgb(242, 242, 242);
+        background-color: rgb(248, 248, 248);
         border-radius: 0.7rem;
 
         .header {
@@ -29,7 +29,6 @@
                 font-size: 1rem;
                 text-align: center;
                 margin-top: 1rem;
-                // color
             }
         }
 
@@ -38,26 +37,46 @@
             flex-direction: column;
             align-items: start;
             padding: 1rem;
-            margin-left: 3rem;
+            margin-left: 1rem;
             padding-top: 1.5rem;
-            width: 80%;
+            width: 100%;
+            justify-content: space-around;
+
 
             label {
-                width: 60%;
+                width: 75%;
                 line-height: 2rem;
 
+                span {
+                    font-size: 0.95rem;
+                }
+
                 input {
-                    width: 90%;
+                    width: 100%;
                     padding: 0.5rem;
                     margin-bottom: 1rem;
                     border-radius: 0.5rem;
-                    border: 1px solid #ccc;
+                    border: none;
+                    margin-left: 0.2rem;
 
                 }
 
                 input::placeholder {
                     color: #999;
                     font-size: 14px;
+                }
+            }
+
+            a {
+                padding: 1rem 0 0 2rem;
+
+                button {
+                    text-decoration: none;
+                    color: #ffffff;
+                    background-color: #38B2E3;
+                    border: none;
+                    padding: 0.7rem 6.3rem;
+                    border-radius: 0.5rem;
                 }
             }
         }
